<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fys_background"
        tools:context=".presentation.ui.account.AccountFragment">

        <Toolbar
            android:id="@+id/toolbar"
            style="@style/FysToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivFysLogo"
                style="@style/FysLogo"
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp">

                <TextView
                    android:id="@+id/tvMyProfile"
                    style="@style/FysDarkLargeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/fragment_user_profile_title"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/constraintAccount" />

                <TextView
                    android:id="@+id/tvUserGreeting"
                    style="@style/FysPrimaryMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_user_profile_greeting"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMyProfile" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMyBookings"
                    style="@style/FysSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/user_profile_my_bookings"
                    android:visibility="gone"
                    app:icon="@drawable/ic_calendar"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserGreeting"
                    tools:visibility="visible" />

                <View
                    android:id="@+id/divider7"
                    style="@style/ButtonDivider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnMyBookings"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvPersonalDetailsCategory"
                    style="@style/FysDarkMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/user_profile_category_personal_details"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider7"
                    app:layout_goneMarginTop="24dp"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangeFullname"
                    style="@style/FysSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/user_profile_change_fullname"
                    android:visibility="gone"
                    app:icon="@drawable/ic_person"
                    app:layout_constraintTop_toBottomOf="@+id/tvPersonalDetailsCategory"
                    tools:visibility="visible" />

                <View
                    android:id="@id/divider2"
                    style="@style/ButtonDivider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnChangeFullname"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangeEmail"
                    style="@style/FysSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/user_profile_change_email"
                    android:visibility="gone"
                    app:icon="@drawable/ic_email"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"
                    tools:visibility="visible" />

                <View
                    android:id="@+id/divider3"
                    style="@style/ButtonDivider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnChangeEmail"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangePhone"
                    style="@style/FysSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/user_profile_change_phone_number"
                    android:visibility="gone"
                    app:icon="@drawable/ic_phone"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    tools:visibility="visible" />

                <View
                    android:id="@+id/divider4"
                    style="@style/ButtonDivider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnChangePhone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tvSecurityCategory"
                    style="@style/FysDarkMediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/user_profile_category_security"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider4" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDeleteAccount"
                    style="@style/FysSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/user_profile_delete_account"
                    android:visibility="gone"
                    app:icon="@drawable/ic_delete"
                    app:layout_constraintTop_toBottomOf="@+id/tvSecurityCategory"
                    tools:layout_editor_absoluteX="16dp"
                    tools:visibility="visible" />

                <View
                    android:id="@+id/divider5"
                    style="@style/ButtonDivider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnDeleteAccount"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogout"
                    style="@style/FysSettingsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="@string/user_profile_logout"
                    app:icon="@drawable/ic_logout"
                    app:layout_constraintTop_toBottomOf="@+id/btnDeleteAccount"
                    tools:layout_editor_absoluteX="16dp" />

                <View
                    android:id="@+id/divider6"
                    style="@style/ButtonDivider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>